--- a/sherwin_demo/src/AdminDashBoard/PriceGrid.css
+++ b/sherwin_demo/src/AdminDashBoard/PriceGrid.css
@@ -61,3 +61,10 @@
   justify-content:center;
   gap: 10px;
 }
+.confirm-change{
+  color: rgb(58, 121, 216);
+}
+.third-row{
+  display: flex;
+  justify-content: space-between;
+}
