added filter function

--- a/sherwin_demo/src/AdminDashBoard/BrandQualityGroup/BrandQuality.css
+++ b/sherwin_demo/src/AdminDashBoard/BrandQualityGroup/BrandQuality.css
@@ -34,9 +34,8 @@
   .t-head{
     background-color: aqua;
   }
-  .body-down{
+  .body-brand-quality{
     margin-left: 10px;
-    /* width: 99vw; */
     margin-top: 10px;
   }
  
