--- a/sherwin_demo/src/AdminDashBoard/BrandQualityGroup/BrandQuality.css
+++ b/sherwin_demo/src/AdminDashBoard/BrandQualityGroup/BrandQuality.css
@@ -58,7 +58,7 @@
     gap: 20px;
   }
   .table-code{
-    color: aqua;
+    color: rgb(0, 183, 255);
   }
   .css-1wvnaxz-MuiTableCell-root.MuiTableCell-head {
     background-color: #0d6efd;
