--- a/sherwin_demo/src/LoginForm/index.css
+++ b/sherwin_demo/src/LoginForm/index.css
@@ -7,7 +7,7 @@
   width: 100%;
   margin: auto;
   background-size: cover;
-  background-image: url('https://www.mcidrywall.com/wp-content/uploads/2017/05/MCI-Sherwin-Williams-Exterior.jpg')
+  background-image: url('https://www.theraleighpaintcontractor.com/wp-content/uploads/2019/07/Sherwin-Williams-Paint-Company-Store.jpeg')
 }
 @media screen and (min-width: 992px) {
   .login-form-container {
