--- a/sherwin_demo/src/LoginForm/index.css
+++ b/sherwin_demo/src/LoginForm/index.css
@@ -1,18 +1,20 @@
 .login-form-container {
-  display: flex;
+  display:flex ;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   height: 100vh;
-  width: 100%;
-  margin: auto;
+  background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('https://www.theraleighpaintcontractor.com/wp-content/uploads/2019/07/Sherwin-Williams-Paint-Company-Store.jpeg')
+  background-position:60%;
+  background-image: url('https://thebossmagazine.com/wp-content/uploads/2021/09/russn_fckr-krV5aS4jDjA-unsplash-scaled.jpg');
+  /* background-image: linear-gradient(to left, rgb(209, 155, 155),rgb(160, 233, 160),rgb(207, 207, 160)); */
 }
 @media screen and (min-width: 992px) {
   .login-form-container {
     flex-direction: row;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: flex-start;
    
   }
 }
@@ -63,18 +65,19 @@
   max-width: 350px;
   /* border: 1px solid; */
   padding: 10px;
-  background-color: rgb(243, 223, 223);
+  background-image: url('https://img.freepik.com/free-vector/hand-painted-watercolor-abstract-watercolor-background_23-2149012404.jpg?w=2000');
+  /* background-color: rgb(243, 223, 223); */
   /* box-shadow: 0px 0px 10px 0px rgb(236, 235, 227); */
 }
 
 @media screen and (min-width: 992px) {
   .form-container {
-    margin-top: 200px;
+  
     width: 350px;
     flex-shrink: 0;
     box-shadow: 0px 8px 40px rgba(7, 7, 7, 0.08);
     padding: 64px 48px 64px 48px;
-    background-color: rgb(236, 218, 218);
+    background-image: url('https://img.freepik.com/free-vector/hand-painted-watercolor-abstract-watercolor-background_23-2149012404.jpg?w=2000');
     /* box-shadow: 0px 0px 10px 0px rgb(236, 235, 227); */
   }
 }
@@ -143,7 +146,7 @@
   font-family: 'Roboto';
   font-size: 20px;
   line-height: 16px;
-  color: #aa07db;
+  color: #f50612;
 }
 
 
